kuber-homeworks/1.5/files/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: multitool
spec:
  replicas: 1
  selector:
    matchLabels:
      app: multitool
  template:
    metadata:
      labels:
        app: multitool
    spec:
      containers:    
      - name: multitool
        image: wbitt/network-multitool  
        ports:
         - containerPort: 80 
           name: multi-http
