kuber-homeworks/1.5/files/svcfrontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: svcfrontend
spec:
  selector:
    app: nginx
  ports:
   - name: frontend
     port: 80
     protocol: TCP
     targetPort: nginx-http
