kuber-homeworks/1.5/files/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
   - host:
     http:
       paths:
         - pathType: Prefix
           backend:
            service:
             name: svcfrontend
             port:
               number: 80
           path: /
         - pathType: Prefix
           backend:
            service:
             name: svcbackend
             port:
               number: 80
           path: /api
